# moya-buriburi-fork

./: pitch-deck-final(2).pptx  pyproject.toml
examples/: quick_start_claude.py  quick_start_claude_search.py  quick_start_deepseek.py  quick_start_dynamic_rag.py  quick_start_hf_agent.py  quick_start_ollama_bid.py  quick_start_ollama_consult.py  quick_start_ollama_deepseek.py  quick_start_ollama_dynamic_tool.py  quick_start_ollama_math.py  quick_start_ollama_rag.py  test_azure_openai.py  test_azure_openai_dynamic_rag.py
examples/text-completion/: app.py
examples/text-completion/templates/: index.html
moya/agents/: claude_agent.py  deepseek_agent.py  huggingface_agent.py
moya/orchestrators/: bid_orchestrator.py
moya/tools/: agent_consultation_tool.py  dynamic_tool_registrar.py  math_tool.py  rag_search_tool.py  search_tool.py  text_completion.py  text_completion_azure.py
moya/vectorstore/: base_vectorstore.py  chroma_vectorstore.py  faisscpu_vectorstore.py
